# cassowary

./: CMakeLists.txt  LICENSE  README.md
cassowary/: Cassowary.h  Cl.h  ClAbstractVariable.h  ClC.h  ClConstraint.h  ClConstraintHash.h  ClDummyVariable.h  ClEditConstraint.h  ClEditOrStayConstraint.h  ClErrors.h  ClFDBinaryOneWayConstraint.h  ClFDConnectorVariable.h  ClFDConstraint.h  ClFDSolver.h  ClFDVariable.h  ClFloatVariable.h  ClLinearConstraint.h  ClLinearEquation.h  ClLinearExpression.h  ClLinearExpression_fwd.h  ClLinearInequality.h  ClMap.h  ClObjectiveVariable.h  ClPoint.h  ClReader.h  ClSet.h  ClSimplexSolver.h  ClSlackVariable.h  ClSolver.h  ClStayConstraint.h  ClStrength.h  ClSymbolicWeight.h  ClTableau.h  ClTimedSimplexSolver.h  ClTypedefs.h  ClVariable.h  auto_ptr.h  cl_auto_ptr.h  debug.h  timer.h
include/: ClSolver.h
msvc/: cassowary.sln
msvc/cassowary/: cassowary.vcxproj  cassowary.vcxproj.filters
src/: CMakeLists.txt  ClAbstractVariable.cc  ClC.cc  ClConstraint.cc  ClFDBinaryOneWayConstraint.cc  ClFDConnectorVariable.cc  ClFDSolver.cc  ClFDVariable.cc  ClFloatVariable.cc  ClLinearExpression.cc  ClReader.l  ClReader.y  ClSimplexSolver.cc  ClSolver.cc  ClStrength.cc  ClSymbolicWeight.cc  ClTableau.cc  ClVariable.cc
